--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,14 +89,14 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Restore dependencies
-        run: dotnet restore "src/server/virtualmuseum.web/virtualmuseum.web.csproj"
+        run: dotnet restore "src/server/virtualmuseum.web.api/virtualmuseum.web.api.csproj"
       
       - name: Generate a version number
         id: version
         run: echo "::set-output name=version::$(date +'%Y.%m.%d').${{ github.run_number }}"
 
       - name: Publish
-        run: dotnet publish "src/server/virtualmuseum.web/virtualmuseum.web.csproj" -c Release -o /tmp/publish
+        run: dotnet publish "src/server/virtualmuseum.web.api/virtualmuseum.web.api.csproj" -c Release -o /tmp/publish
 
       - name: Zip published files
         run: zip -r virtualmuseum-${{ steps.version.outputs.version }}.zip /tmp/publish
