--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-netzalist.eu.auth0.com",
+    "ClientId": "TfbGYvjN5bL89wpbf6Tosz84AzYVJGjo",
+    "ClientSecret": "TA6tWhQ8jit4PBOznEP86kLMDDP7_tvardIRNxFco4OYL-psxhbUeZ9CyN5YRdas",
+    "Audience": "VirtualMuseum"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=db/virtualmuseum.db"
+  }
 }
