--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
@@ -21,9 +21,20 @@
 
     <ItemGroup>
       <PackageReference Include="dotenv.net" Version="3.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Radzen.Blazor" Version="5.0.6" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="db\" />
     </ItemGroup>
 
 </Project>
