--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "dev-netzalist.eu.auth0.com",
-    "ClientId": "TfbGYvjN5bL89wpbf6Tosz84AzYVJGjo",
-    "ClientSecret": "TA6tWhQ8jit4PBOznEP86kLMDDP7_tvardIRNxFco4OYL-psxhbUeZ9CyN5YRdas",
-    "Audience": "VirtualMuseum"
+    "Domain": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "Audience": ""
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=db/virtualmuseum.db"
