--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
@@ -34,6 +34,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Components\Pages\Inventory\Components\" />
       <Folder Include="db\" />
     </ItemGroup>
 
