--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/.env.example
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/.env.example
@@ -1,2 +1,6 @@
 ReleaseService__GithubPersonalAccessToken="XXXXX"
 ReleaseService__GithubBaseUrl="https://api.github.com/repos/Netzalist-GmbH-Co-KG/virtualmuseum/releases"
+Auth0_Domain=""
+Auth0_Audience=""
+Auth0_ClientId=""
+Auth0_ClientSecret=""
