feat: started adding mediafiles

--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
@@ -35,6 +35,7 @@
 
     <ItemGroup>
       <Folder Include="Components\Pages\Inventory\Components\" />
+      <Folder Include="Components\Pages\MultiMediaPresentations\Components\" />
       <Folder Include="db\" />
     </ItemGroup>
 
