--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
@@ -2,7 +2,7 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "http://*:5001"
+        "Url": "http://localhost:5001"
       }
     }
   },
