--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\BunnyCDN.Net.Storage\BunnyCDN.Net.Storage.csproj" />
       <ProjectReference Include="..\virtualmuseum.web.data\virtualmuseum.web.data.csproj" />
     </ItemGroup>
 
