--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/virtualmuseum.web.api.csproj
@@ -32,6 +32,7 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Radzen.Blazor" Version="5.0.6" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+      <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
     </ItemGroup>
 
     <ItemGroup>
