--- a/src/server/virtualmuseum.web.node/package.json
+++ b/src/server/virtualmuseum.web.node/package.json
@@ -7,7 +7,12 @@
     "start": "node dist/server.js",
     "dev": "nodemon",
     "build": "tsc",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:coverage:watch": "jest --coverage --watchAll",
+    "test:ci": "jest --ci --coverage --runInBand"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -21,11 +26,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.9.0",
     "@types/sqlite3": "^3.1.11",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.6",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
