--- a/src/server/virtualmuseum.web.node/package.json
+++ b/src/server/virtualmuseum.web.node/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:coverage:watch": "jest --coverage --watchAll",
+    "test:coverage:interactive": "jest --coverage --no-cache --watchAll --verbose",
     "test:ci": "jest --ci --coverage --runInBand"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "@types/swagger-jsdoc": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
     "nodemon": "^3.0.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
