--- a/src/server/virtualmuseum.web.node/package.json
+++ b/src/server/virtualmuseum.web.node/package.json
@@ -25,6 +25,7 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^5.0.1",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
@@ -33,6 +34,7 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.6",
+    "chai": "^5.1.2",
     "jest": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
     "nodemon": "^3.0.1",
