--- a/src/server/virtualmuseum.web.node/package.json
+++ b/src/server/virtualmuseum.web.node/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon",
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "test": "jest",
+    "test": "jest --silent",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:coverage:watch": "jest --coverage --watchAll",
