--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/.env.example
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/.env.example
@@ -1,6 +1,12 @@
-ReleaseService__GithubPersonalAccessToken="XXXXX"
-ReleaseService__GithubBaseUrl="https://api.github.com/repos/Netzalist-GmbH-Co-KG/virtualmuseum/releases"
-Auth0_Domain=""
-Auth0_Audience=""
-Auth0_ClientId=""
-Auth0_ClientSecret=""
+ReleaseService__GithubPersonalAccessToken=""
+ReleaseService__GithubBaseUrl=""
+Auth0__Domain=""
+Auth0__Audience=""
+Auth0__ClientId=""
+Auth0__ClientSecret=""
+BunnyStorage__StorageZoneName=""
+BunnyStorage__ApiAccessKey=""
+CertificateName=""
+CertificatePassword=""
+DatabasePath=""
+MediaPath=""
