--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/appsettings.json
@@ -1,19 +1,9 @@
 {
-  "Kestrel": {
-    "EndPoints": {
-      "Http": {
-        "Url": "http://*:3000"
-      }
-    }
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=db/virtualmuseum.db"
-  }
+  "AllowedHosts": "*"
 }
