--- a/src/server/virtualmuseum.web/virtualmuseum.web.api/Properties/launchSettings.json
+++ b/src/server/virtualmuseum.web/virtualmuseum.web.api/Properties/launchSettings.json
@@ -1,13 +1,5 @@
 {
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-    "iisSettings": {
-      "windowsAuthentication": false,
-      "anonymousAuthentication": true,
-      "iisExpress": {
-        "applicationUrl": "http://localhost:56417",
-        "sslPort": 44344
-      }
-    },
+  "$schema": "https://json.schemastore.org/launchsettings.json",
     "profiles": {
       "Watch": {
         "commandName": "Executable",
@@ -15,27 +7,11 @@
         "executablePath": "dotnet.exe",
         "commandLineArgs": "watch run debug --launch-profile Debug"
       },
-      "http": {
-        "commandName": "Project",
-        "dotnetRunMessages": true,
-        "launchBrowser": true,
-        "applicationUrl": "http://localhost:5001",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
-        }
-      },
       "https": {
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7066;http://localhost:5001",
-        "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
-        }
-      },
-      "IIS Express": {
-        "commandName": "IISExpress",
-        "launchBrowser": true,
+        "applicationUrl": "https://timeglidevr.xr-ai.de/swagger",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
